# UVen

./: .gitignore  .gitmodules  LICENSE  README.md  UVen_mk2_user_manual.odt
hardware/: SBT10X_single_led.eprj  uven-pocket.ods  uven2-mk3-cc-driver-20x.eprj  uven2-mk3-cc-driver-25x.eprj  uven2-mk3-cc-driver-80x.eprj  uven2-mk3-cc-driver-single.eprj  uven2-mk3-cc-driver-single_v2.eprj  uven2-mk3-cc-interface.eprj  uven2-mk3-interlock-switch-A.step  uven2-mk3-interlock-switch-B.step  uven2-mk3-interlock-switch.step  uven2-mk3-led-array-100x.eprj  uven2-mk3-lid-switch-A.eprj  uven2-mk3-lid-switch-B.eprj  uven2-mk3-lid-switch.eprj  uven2-mk3-main-board.eprj  uven2-mk3.xlsx  uven2_mk2.ods
hardware/MTSM340UV2-F5120S-current-driver/: LM3407-current-controller.sch  LM3407-current-controller.sch-bak  MTSM340UV2-F5120S-current-driver-cache.lib  MTSM340UV2-F5120S-current-driver.kicad_pcb  MTSM340UV2-F5120S-current-driver.kicad_pcb-bak  MTSM340UV2-F5120S-current-driver.net  MTSM340UV2-F5120S-current-driver.pro  MTSM340UV2-F5120S-current-driver.sch  MTSM340UV2-F5120S-current-driver.sch-bak  MTSM340UV2-F5120S-current-driver.step  fp-info-cache  fp-lib-table  sym-lib-table
hardware/poti_hack/: poti_hack-cache.lib  poti_hack.kicad_pcb  poti_hack.kicad_pcb-bak  poti_hack.kicad_prl  poti_hack.kicad_pro  poti_hack.kicad_sch  poti_hack.net  poti_hack.pro  poti_hack.sch  poti_hack.sch-bak  sym-lib-table
hardware/sbm-120-uv-copper-base-board/: fp-info-cache  sbm-120-uv-copper-base-board.kicad_pcb  sbm-120-uv-copper-base-board.kicad_prl  sbm-120-uv-copper-base-board.kicad_pro  sbm-120-uv-copper-base-board.kicad_sch  sbm-120-uv-copper-base-board.step  sym-lib-table
hardware/sbm-120-uv-mount/: fp-info-cache  fp-lib-table  sbm-120-uv-mount-cache.lib  sbm-120-uv-mount.bak  sbm-120-uv-mount.kicad_pcb  sbm-120-uv-mount.kicad_pcb-bak  sbm-120-uv-mount.net  sbm-120-uv-mount.pro  sbm-120-uv-mount.sch  sbm-120-uv-mount.sch-bak  sbm-120-uv-mount.step
hardware/uven-mainboard/: #auto_saved_files#  _autosave-uven-mainboard.sch  fp-lib-table  sym-lib-table  uven-mainboard-cache.lib  uven-mainboard-rescue.lib  uven-mainboard.bak  uven-mainboard.kicad_pcb  uven-mainboard.kicad_pcb-bak  uven-mainboard.kicad_prl  uven-mainboard.kicad_pro  uven-mainboard.kicad_sch  uven-mainboard.net  uven-mainboard.pro  uven-mainboard.sch  uven-mainboard.sch-bak  ~uven-mainboard.kicad_sch.lck
hardware/uven-mainboard-2D/: fp-info-cache  fp-lib-table  sym-lib-table  uven-mainboard-rescue.lib  uven-mainboard.bak  uven-mainboard.kicad_pcb  uven-mainboard.kicad_prl  uven-mainboard.kicad_pro  uven-mainboard.kicad_sch  uven-mainboard.sch  uven-mainboard.step
hardware/uven-pocket-main-board/: #auto_saved_files#  (+7 more)
software/: thermistor_calibration.csv  thermistor_calibration.py
src/: temp_record.py  thermistor_calibration.py  thermistor_calibration_pocket_mk2.csv  uven2-mk3-main-board.ws5vis  uven2_mk2.csv
src/uven_control_center_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/uven_control_center_gui/include/uven_control_center_gui/: uven_control_center_gui.hpp
src/uven_control_center_gui/launch/: uven_control_center_gui.launch
src/uven_control_center_gui/src/: plot_uven.py  test_tcp.cpp  uven_control_center_gui.cpp  uven_control_center_gui.ui
(+162 files in other folders)
