<?xml version="1.0"?>
<package format="2">
  <name>uven_control_center_gui</name>
  <version>0.0.0</version>
  <description>torque test bed plugin for rqt</description>
  <maintainer email="simontrendel@gmail.com">Simon Trendel</maintainer>
  <license>MIT</license>
  <author >Simon Trendel</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
